[gd_scene load_steps=2 format=2]

[ext_resource path="res://cell/cell.gd" type="Script" id=1]

[node name="Cell" type="Sprite"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
